; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_loop.c_lo_do_transfer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_loop.c_lo_do_transfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loop_device = type { {}* }
%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)* @lo_do_transfer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lo_do_transfer(%struct.loop_device* %0, i32 %1, %struct.page* %2, i32 %3, %struct.page* %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca %struct.loop_device*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.page*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.page*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.loop_device* %0, %struct.loop_device** %10, align 8
  store i32 %1, i32* %11, align 4
  store %struct.page* %2, %struct.page** %12, align 8
  store i32 %3, i32* %13, align 4
  store %struct.page* %4, %struct.page** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  %18 = load %struct.loop_device*, %struct.loop_device** %10, align 8
  %19 = getelementptr inbounds %struct.loop_device, %struct.loop_device* %18, i32 0, i32 0
  %20 = bitcast {}** %19 to i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)**
  %21 = load i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)*, i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)** %20, align 8
  %22 = icmp ne i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)* %21, null
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  %25 = call i64 @unlikely(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %8
  store i32 0, i32* %9, align 4
  br label %42

28:                                               ; preds = %8
  %29 = load %struct.loop_device*, %struct.loop_device** %10, align 8
  %30 = getelementptr inbounds %struct.loop_device, %struct.loop_device* %29, i32 0, i32 0
  %31 = bitcast {}** %30 to i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)**
  %32 = load i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)*, i32 (%struct.loop_device*, i32, %struct.page*, i32, %struct.page*, i32, i32, i32)** %31, align 8
  %33 = load %struct.loop_device*, %struct.loop_device** %10, align 8
  %34 = load i32, i32* %11, align 4
  %35 = load %struct.page*, %struct.page** %12, align 8
  %36 = load i32, i32* %13, align 4
  %37 = load %struct.page*, %struct.page** %14, align 8
  %38 = load i32, i32* %15, align 4
  %39 = load i32, i32* %16, align 4
  %40 = load i32, i32* %17, align 4
  %41 = call i32 %32(%struct.loop_device* %33, i32 %34, %struct.page* %35, i32 %36, %struct.page* %37, i32 %38, i32 %39, i32 %40)
  store i32 %41, i32* %9, align 4
  br label %42

42:                                               ; preds = %28, %27
  %43 = load i32, i32* %9, align 4
  ret i32 %43
}

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
